Fix the horizontal alignment of the message-view overflow menu item icons

--- a/src/platform-implementation-js/style/gmail.css
+++ b/src/platform-implementation-js/style/gmail.css
@@ -105,6 +105,10 @@ div.T-I.inboxsdk__button {
   height: 16px;
 }
 
+body.inboxsdk__gmailv1css .J-N .f4.J-N-JX.inboxsdk__message_more_icon {
+  margin-left: 3px;
+}
+
 body.inboxsdk__gmailv1css .J-N:not(.J-N-JT) .f4.J-N-JX.inboxsdk__message_more_icon {
   margin-top: 0;
 }
